<resources>
    <string name="app_name">MiniTwitter</string>
    <string name="text_email_hint">Email</string>
    <string name="text_password_hint">Password</string>
    <string name="text_access_login">Iniciar Sesión</string>
    <string name="text_new_account">Aun no tienes una cuenta? Crear una nueva</string>
    <string name="text_signup">Registrarse</string>
    <string name="text_go_to_login">¿Ya tienes una cuenta? Ir al inicio de sesión</string>
    <string name="title_activity_dashboar">DashboarActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_kkprueba">KKPrueba</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_tweet_create">Tweettear</string>
</resources>
