<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blueColor"
    tools:context=".ui.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/ic_withe_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtNameSignUp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:textColorHint="@android:color/white"
        app:boxStrokeColor="@android:color/white"
        app:hintTextColor="@android:color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_email_hint"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtEmailSignUp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        app:boxStrokeColor="@android:color/white"
        app:hintTextColor="@android:color/white"
        android:layout_height="wrap_content"
        android:textColorHint="@android:color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_email_hint"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtPasswordSignUp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        app:boxStrokeColor="@android:color/white"
        app:hintTextColor="@android:color/white"
        android:layout_height="wrap_content"
        android:textColorHint="@android:color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_password_hint"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:text="@string/text_signup"
        android:textAllCaps="false"
        android:textColor="@color/blueColor"
        android:textStyle="bold"
        app:backgroundTint="@android:color/white"
        app:rippleColor="@color/blueColor" />

    <TextView
        android:id="@+id/txtSignUpToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_new_account"
        android:textColor="@android:color/white"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"/>
</LinearLayout>