<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueColor"
    tools:context=".ui.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toTopOf="@+id/edtEmailLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_withe_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtEmailLogin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        app:boxStrokeColor="@android:color/white"
        app:hintTextColor="@android:color/white"
        android:layout_height="wrap_content"
        android:textColorHint="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/edtPasswordLogin"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_email_hint"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtPasswordLogin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        app:boxStrokeColor="@android:color/white"
        app:hintTextColor="@android:color/white"
        app:helperTextTextColor="@android:color/white"
        android:layout_height="wrap_content"
        android:textColorHint="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="@+id/edtEmailLogin"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/edtEmailLogin"
        app:layout_constraintTop_toBottomOf="@+id/edtEmailLogin">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_password_hint"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_access_login"
        android:textColor="@color/blueColor"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:backgroundTint="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/txtSignLoginToSignUp"
        app:layout_constraintEnd_toEndOf="@+id/edtPasswordLogin"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/edtPasswordLogin"
        app:layout_constraintTop_toBottomOf="@+id/edtPasswordLogin"
        app:rippleColor="@color/blueColor" />

    <TextView
        android:id="@+id/txtSignLoginToSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_go_to_login"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnLogin"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
</androidx.constraintlayout.widget.ConstraintLayout>